finish: middleware check permisssion with redis
