# app/models/dao/don_vi_tinh_dao.go
@@ -9,6 +9,7 @@ import (
 )
 
 func CreateUnitExec(req *requests.Don_vi_tinh_create, res *responses.Don_vi_tinh_create) error {
+	//kiem tra don vi tinh ton tai
 	if result := helpers.GormDB.Debug().
 		Table("don_vi_tinh").
 		Where("ten = ?", req.Ten).
@@ -21,6 +22,7 @@ func CreateUnitExec(req *requests.Don_vi_tinh_create, res *responses.Don_vi_tinh
 		Ten: req.Ten,
 	}
 
+	//insertt don vi tinh
 	if err := helpers.GormDB.Debug().Create(&don_vi_tinh).Error; err != nil {
 		return errors.New("khong the tao don vi tinh: " + err.Error())
 	}
@@ -34,16 +36,20 @@ func UpdateUnitExec(req *requests.Don_vi_tinh_update) error {
 	var don_vi_tinh db.Don_vi_tinh
 	var don_vi_tinh_temp db.Don_vi_tinh
 
+	//bat dau transaction
 	tx := helpers.GormDB.Begin()
 
+	//kiem tra ten don vi tinh ton tai
 	if result := tx.Debug().
 		Table("don_vi_tinh").
 		Where("ten = ?", req.Ten).
+		Where("ID != ?", req.Id).
 		First(&don_vi_tinh_temp);
 	result.RowsAffected > 0 {
 		return errors.New("ten don vi tinh da ton tai")
 	}
 
+	//kiem tra don vi tinh ton tai
 	if result := tx.Debug().
 		Table("don_vi_tinh").
 		Where("id = ?", req.Id).
@@ -55,11 +61,13 @@ func UpdateUnitExec(req *requests.Don_vi_tinh_update) error {
 
 	don_vi_tinh.Ten = req.Ten
 
+	//update don vi tinh
 	if err := tx.Model(&don_vi_tinh).Debug().Updates(&don_vi_tinh).Error; err != nil {
 		tx.Rollback()
 		return errors.New("khong the cap nhat don vi tinh: " + err.Error())
 	}
 
+	//commit transaction
 	if err := tx.Commit().Error; err != nil {
 		return errors.New("loi commit transaction: " + err.Error())
 	}
@@ -70,16 +78,41 @@ func UpdateUnitExec(req *requests.Don_vi_tinh_update) error {
 func DeleteUnitExec(req *requests.Don_vi_tinh_delete) error {
 	var don_vi_tinh db.Don_vi_tinh
 
-	if result := helpers.GormDB.Debug().
+	//bat dau transaction
+	tx := helpers.GormDB.Begin()
+
+	//kiem tra don vi tinh ton tai
+	if result := tx.Debug().
 		Table("don_vi_tinh").
 		Where("id = ?", req.Id).
 		First(&don_vi_tinh);
 	result.RowsAffected == 0 {
+		tx.Rollback()
 		return errors.New("don vi tinh khong ton tai")
 	}
 
-	if err := helpers.GormDB.Model(&don_vi_tinh).Debug().Update("deleted_at", helpers.GetCurrentTimeVN().String()).Error; err != nil {
+	//kiem tra don vi tinh da duoc su dung
+	var count int64 = 0
+
+	if err := tx.Table("san_pham").Where("don_vi_tinh_id = ?", req.Id).Count(&count).Error; err != nil {
+		tx.Rollback()
+		return errors.New("khong the kiem tra don vi tinh trong san pham: " + err.Error())
+	}
+
+	if count != 0 {
+		tx.Rollback()
+		return errors.New("don vi tinh da duoc su dung trong san pham")
+	}
+
+	//delete don vi tinh
+	if err := tx.Model(&don_vi_tinh).Debug().Update("deleted_at", helpers.GetCurrentTimeVN().String()).Error; err != nil {
+		tx.Rollback()
 		return errors.New("khong the xoa don vi tinh: " + err.Error())
+	}
+
+	//commit transaction
+	if err := tx.Commit().Error; err != nil {
+		return errors.New("loi commit transaction: " + err.Error())
 	}
 
 	return nil
